WP-8692 Fixed the line alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -8609,7 +8609,7 @@ input.signup-submit:hover {
     width: 1095px !important;
     left: auto !important;
     right: 0 !important;
-    top: 38px !important;
+    top: 36px !important;
   }
 }
 @media (max-width: 37.4375em) {
@@ -9066,7 +9066,7 @@ input.signup-submit:hover {
   }
 }
 #md-megamenu-1 .awemenu li .awemenu-item-title {
-  padding-bottom: 26px;
+  padding-bottom: 24px;
 }
 @media (max-width: 37.4375em) {
   #md-megamenu-1 .awemenu li .awemenu-item-title {
