--- a/sass/partials/design/_md-megamenu-main.sass
+++ b/sass/partials/design/_md-megamenu-main.sass
@@ -18,7 +18,7 @@
     width: 1095px !important
     left: auto !important
     right: 0 !important
-    top: 38px !important
+    top: 36px !important
   +breakpoint($bp-for-phone-only)
     right: auto !important
     top: auto !important
@@ -328,7 +328,7 @@ div#header-wrapper.awemenu-sticky + div#hero
     // the top menu bar
     li
       .awemenu-item-title
-        padding-bottom: 26px
+        padding-bottom: 24px
         +breakpoint($bp-for-phone-only)
           font-face: $font-sans
           font-size: 16px
